--- a/committee.html
+++ b/committee.html
@@ -7,13 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICTCon2021 | COMMITTEE</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&amp;display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&amp;display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&amp;display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@600&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/main.css">
     <!-- CSS only-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
@@ -21,17 +27,27 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-main border-0 shadow">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="./images/ictlogo.png" height="80"> ICTCon2021</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="dates.html">Important Dates</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="papers.html">Call for Papers</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="submission.html">Paper Submission</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link active" href="committee.html">Committee</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="speakers.html">Speakers</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="registration.html">Registration</a></li>
-                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="schedule.html">Program Schedule</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" aria-current="page"
+                            href="index.html">Home</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="dates.html">Important
+                            Dates</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="papers.html">Call for
+                            Papers</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="submission.html">Paper
+                            Submission</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link active"
+                            href="committee.html">Committee</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="speakers.html">Speakers</a>
+                    </li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link"
+                            href="registration.html">Registration</a></li>
+                    <li class="nav-item mx-2 fw-bold text-white"><a class="nav-link" href="schedule.html">Program
+                            Schedule</a></li>
                 </ul>
             </div>
         </div>
@@ -42,62 +58,99 @@
     <section class="py-5 text-center">
         <div class="container">
             <h5>Chief Patron:</h5>
-            <p>Director, CIT Kokrajhar</p>
+            <p>Prof. Dr. Dhiraj Bora, Vice Chancellor, ASTU</p>
+            <p>Prof. Debkumar Chakrabarti, Director, CIT Kokrajhar
+            </p>
             <h5>Patron:</h5>
-            <p>Registrar, CIT Kokrajhar</p>
+            <p>Dr. Nripen Das, Registrar, ASTU</p>
+            <p>Dr. Biswa Ranjan Phukan, Academic Registrar, ASTU</p>
+            <p>Ms. Chaitali Brahma, Registrar CIT Kokrajhar</p>
+
+
             <h5>Organization: </h5>
             <p>Executive Committee </p>
             <h5>General Chairs: </h5>
-            <p>Sukumar Nandi, IIT Guwahati </p>
+            <p>Prof. Sukumar Nandi, IIT Guwahati </p>
+            <h5>General Co-chair</h5>
+            <p>Prof. Hemanta Kumar Kalita, CIT Kokrajhar </p>
             <h5>Program Chair: </h5>
-            <p>Amitava Nag, CIT Kokrajhar</p>
+            <p>Dr. Amitava Nag, CIT Kokrajhar</p>
             <h5>Organizing Chair: </h5>
-            <p>Apurbhalal Senapati, CIT Kokrajhar</p>
+            <p>Dr. Apurbhalal Senapati, CIT Kokrajhar</p>
             <p>Pranav Kr. Singh, CIT Kokrajhar</p>
             <h5>Organizing Co-chairs: </h5>
+            <p>Th. Shanta Kumar, GIMT, Guwahati</p>
             <p>Ranjan Patwari, CIT Kokrajhar</p>
             <h5>Finance Co-Chairs: </h5>
+            <p>Debajyoti Goswami, Finance and Accounts Officer, ASTU</p>
+            <p>Pingki Sarma, Cashier, ASTU</p>
+
             <p>Prasanta Baruah, CIT Kokrajhar</p>
-            <h5>Workshop Co-Chairs: </h5>
-            <h5>PhD Forum Chair: </h5>
-            <p>Pankaj Pratap Singh, CIT Kokrajhar.</p>
-            <p>Ranjan Maity,  CIT Kokrajhar.</p>
-            <p>Anup Kumar Barman, CIT Kokrajhar.</p>
-            <h5>Publication Chair: </h5>
-            <p>Amitava Nag, CIT Kokrajhar</p>
-            <h5>Website Co-Chairs:  </h5>
-            <p>Sanjib Narzary, CIT Kokrajhar.</p>
-            <h5>Publicity Co-Chairs:   </h5>
-            <p>Bikramjeet Chaudhoury, CIT Kokrajhar</p>
-            <h5>Sponsorship Co-Chairs:    </h5>
-            <h5>Workshop Co-Chairs:    </h5>
             
+            <h5>PhD Forum Chairs: </h5>
+            <p>Dr. Pankaj Pratap Singh, CIT Kokrajhar.</p>
+            <p>Dr. Ranjan Maity, CIT Kokrajhar.</p>
+            <p>Dr. Sahalad Barguary, CIT Kokrajhar </p>
+            <p>Dr. Anup Kumar Barman, CIT Kokrajhar.</p>
+            <h5>Publication Chairs: </h5>
+            <p>Dr. Amitava Nag, CIT Kokrajhar</p>
+            <p>Dr. Apurbhalal Senapati, CIT Kokrajhar</p>
+            <p>Pranav Kr. Singh, CIT Kokrajhar</p>
+
+            <h5>Website Chair: </h5>
+            <p>Sanjib Narzary, CIT Kokrajhar.</p>
+            <h5>Publicity Co-Chairs: </h5>
+            <p>Bikramjeet Chaudhoury, CIT Kokrajhar</p>
+            <p>Dr. Nabajyoti Majumdar, CIT Kokrajhar</p>
+            <p>Arindam Saha, GIMT Guwahati</p>
+
+            <h5>Registration Chairs:</h5>
+            <p>Mithun Karmakar, CIT kokrajhar</p>
+            <p>Tania Sarkar, CIT Kokrajhar</p>
+            <p>Dharani Kanta Roy, CIT Kokrajhar</p>
+            <p>Pooja Sarkar, CIT Kokrajhar</p>
+
+            <h5>Members:</h5>
+            <p>Maharnav Bhattacharyya, ASTU</p>
+            <p>Hemagni Deka, ASTU</p>
+            <p>Ankur ThakurIa, ASTU</p>
+            <p>Nilam Pathak, ASTU</p>
+            <p>Anuron Deka, ASTU</p>
+            <p>Nishant Bharali, ASTU</p>
+            <p>Tapashi Kalita, ASTU</p>
+            <p>Debashish Deka, ASTU</p>
+
+
+            <h5>Advisory Committee:</h5>
+            <p>Prof. Tapan Kumar Maiti, CIT Kokrajhar</p>
+            <p>Prof. Monomoy Goswami, CIT Kokrajhar</p>
+            <p>Dr. Subhajit Ray, CIT Kokrajhar</p>
+            <p>Dr. Avik Mukherjee, CIT Kokrajhar</p>
+            <p>Dr. Arunendu Mondal, CIT Kokrajhar</p>
+            <p>Dr. Bihung Brahma, CIT Kokrajhar</p>
+            <p>Mr. JD Herembeswar Basumatary, CIT Kokrajhar</p>
+            <p>Dr. Pradip Brahmachary, CIT Kokrajhar</p>
 
 
 
 
+
+
+            <h5>Technical Program Committee:</h5>
+            <p>Dr. J. P. Singh, NIT Patna</p>
+            <p>Dr. Arnab Maji, NEHU, Shillong</p>
+            <p>Dr. Bhaskar Saha, CIT Kokrajhar</p>
+            <p>Dr. Soumen Maji, CIT Kokrjhar</p>
+            <p>Mr. Haradhon Chel, CIT Kokrajhar</p>
+            <p>Mr. Utpal Kr. Sikdar, IBS Software Pvt. Ltd.</p>
+
         </div>
     </section>
-    <section>
-        <div class="bg-secondary text-white text-center py-4 px-5">
-            <h1>Advisary Committee</h1>
-        </div>
-        <div class="p-5 text-center text-danger">Updating Soon..</div>
-    </section>
-    <section>
-        <div class="bg-secondary text-white text-center py-4 px-5">
-            <h1>Technical Program Committee</h1>
-        </div>
-        <div class="p-5 text-center text-danger">Updating Soon..</div>
-    </section>
-    <section>
-        <div class="bg-secondary text-white text-center py-4 px-5">
-            <h1>Organizing Committee</h1>
-        </div>
-        <div class="p-5 text-center text-danger">Updating Soon..</div>
-    </section>
+    
     <!-- JavaScript Bundle with Popper-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
