--- a/registration.html
+++ b/registration.html
@@ -38,9 +38,29 @@
     </nav>
     <section class="text-center p-5 bg-main-2 text-uppercase">
         <h1 class="page-title">Registration</h1>
+        
+
+
     </section>
     <section>
-        <div class="p-5 text-center text-danger">Updating Soon..</div>
+        <div class="p-5 text-center text-danger">
+            
+            Registration Fees Details:<br>
+
+
+<table align="center">
+<tr><td>Student: </td><td><b>Rs. 500/- </b></td></tr>
+
+
+<tr><td>Academic Person: </td><td><b>Rs. 1000/- </b></td></tr>
+
+
+    <tr><td>Industry Person:</td><td> <b>Rs. 2000/- </b></td></tr>
+
+
+        <tr><td>International Author:</td><td> <b>20 USD</b></td></tr>
+</table>
+        </div>
     </section>
     <!-- JavaScript Bundle with Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
