--- a/papers.html
+++ b/papers.html
@@ -84,7 +84,7 @@
                     <div>Advanced Communication Technologies</div>
                     <div>IoT Based Systems and Applications</div>
                     <div>Network Security and Reliability</div>
-                    Software Defined Network(SDN)Software Defined Network(SDN)<br>
+                    Software Defined Network(SDN)<br>
                     Green Computing<br>
                     Web Intelligence and Computing<br>
 
