--- a/papers.html
+++ b/papers.html
@@ -100,6 +100,7 @@
                     Computational Biology Crowdsourcing<br>
                     Smart Healthcare<br>
                     Smart Grid<br>
+                    Micro Grid, Electric Vehicle <br>
                     Brain-Computer Interfacing <br>
                     Human-Machine Interaction<br>
                     Brain Imaging<br>
