--- a/submission.html
+++ b/submission.html
@@ -42,7 +42,7 @@
     <section class="py-5">
         <div class="container">
             <h4>Paper submission will be through EasyChair.</h4>
-            <h4>EasyChair link <span class="text-danger">https://easychair.org/cfp/ICTCON2021</span></h4>
+            <h4>EasyChair link: <span class="text-primary"><a href="https://easychair.org/cfp/ICTCON2021"></a></span></h4>
             <h4>You can also follow the format link provided as follows.<span class="text-danger">Updating soon...</span></h4>
             <h4>Latex format link: <span class="text-danger">Updating soon...</span></h4>
             <h4>Word format link: <span class="text-danger">Updating soon...</span></h4>
