--- a/papers.html
+++ b/papers.html
@@ -71,7 +71,7 @@
                 <br>
                 <h2>Data Analytics and Decision Making</h2>
                 <div>Big Data Analytics</div>
-                <div>Big Data: Novel Theory, Algorithms and Applications
+                <div>Big Data: Novel Theory, Algorithms and Applications<br>
                     5 V's of Big Data <br>
                     Big Data Visualization <br>
                     Big Data Applications Sensor Network<br>
