--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="col">
                     <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/ict.jpg" alt="ICT image">
                         <div class="card-body">
-                            <h5 class="card-title text-center"><em>ABOUT THE CONFERENCE</em></h5>
+                            <h5 class="card-title text-center">ABOUT THE CONFERENCE</h5>
                             <div class="card-text text-justify">Updating Soon.. <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                 <div class="col">
                     <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/citlogo.jpg" alt="CIT logo"> 
                         <div class="card-body">
-                            <h5 class="card-title text-center"><em>ABOUT CIT KOKRAJHAR</em></h5>
+                            <h5 class="card-title text-center">ABOUT CIT KOKRAJHAR</h5>
                             <div class="card-text text-justify">Central Institute of Technology (CIT), Kokrajhar is situated in Kokrajhar District of Bodoland Territorial Region (BTR) in Assam. CIT has been established for the basic objective of fulfilling the aspirations of the Bodo People
                                 relating to their cultural identity, language, education and overall economic development of the region and to impart Bodo youths with requisite technological and vocational training to produce the required manpower to
                                 give the impetus to economic growth of this area and to integrate the Bodo People into the mainstream of Technical and Vocational Education. It is a Centrally Funded Institute under the Ministry of Human Resource Development,
@@ -172,7 +172,7 @@
                 <div class="col">
                     <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/astu-home2.jpeg" alt="ASTU, Assam">
                         <div class="card-body">
-                            <h5 class="card-title text-center"><em>ABOUT ASTU</em></h5>
+                            <h5 class="card-title text-center">ABOUT ASTU</h5>
                             <p class="card-text text-justify">
                                 The Assam Science and Technology University was established by Government of Assam under Assam Science & Technology University Act 2009. It aims to provide education and research in the field of science & technology and other professional courses in Assam. ASTU is the premier and only technical university in the North Eastern Region of India. The university is responsible for academic regulation of all undergraduate and post-graduate programs in engineering, and pharmaceutical sciences and a few professional courses in science and management sectors. ASTU also conducts an in-house post-graduate course in Energy Engineering. Since its inception, ASTU has been undertaking high quality teaching and research in frontier areas of science & technology continuously upgrading the syllabi and creating environment for international standard research and emphasizing in bridging the ancient wisdom of the region with modern technology.
 
@@ -186,7 +186,7 @@
                 <div class="col">
                     <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/btr.jpg" alt="BTR, Assam">
                         <div class="card-body">
-                            <h5 class="card-title text-center"><em>ABOUT BTR,ASSAM</em></h5>
+                            <h5 class="card-title text-center">ABOUT BTR,ASSAM</h5>
                             <p class="card-text text-justify">Bodoland Territorial Region, is an autonomous region in Assam, Northeast India. It made up of four districts on the north bank of the Brahmaputra river, by the foothills of Bhutan and Arunachal Pradesh.
                                 It is administered by an elected body known as the Bodoland Territorial Council which came into existence under the terms of a peace agreement signed in February 2003 and its autonomy was further extended by an agreement
                                 signed in 27th of January 2020. The region covers an area of over nine thousand square kilometres and is predominantly inhabited by the Bodo people and other indigenous communities of Assam.
