--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
                             <div class="card-text text-justify">Central Institute of Technology (CIT), Kokrajhar is situated in Kokrajhar District of Bodoland Territorial Region (BTR) in Assam. CIT has been established for the basic objective of fulfilling the aspirations of the Bodo People
                                 relating to their cultural identity, language, education and overall economic development of the region and to impart Bodo youths with requisite technological and vocational training to produce the required manpower to
                                 give the impetus to economic growth of this area and to integrate the Bodo People into the mainstream of Technical and Vocational Education. It is a Centrally Funded Institute under the Ministry of Human Resource Development,
-                                Government of India.The Institute was established on the 19th of December 2006.</div>
+                                Government of India.The Institute was established on the 19th of December 2006.<br>
+                           
+                                <p>Visit <a href="https://www.cit.ac.in/">www.cit.ac.in</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -174,7 +177,9 @@
                         <div class="card-body">
                             <h5 class="card-title text-center"><em>ABOUT ASTU</em></h5>
                             <p class="card-text text-justify">
-                                The Assam Science and Technology University was established by Government of Assam under Assam Science & Technology University Act 2009. It aims to provide education and research in the field of science & technology and other professional courses in Assam. ASTU is the premier and only technical university in the North Eastern Region of India. The university is responsible for academic regulation of all undergraduate and post-graduate programs in engineering, and pharmaceutical sciences and a few professional courses in science and management sectors. ASTU also conducts an in-house post-graduate course in Energy Engineering. Since its inception, ASTU has been undertaking high quality teaching and research in frontier areas of science & technology continuously upgrading the syllabi and creating environment for international standard research and emphasizing in bridging the ancient wisdom of the region with modern technology.
+                                The Assam Science and Technology University was established by Government of Assam under Assam Science & Technology University Act 2009. It aims to provide education and research in the field of science & technology and other professional courses in Assam. ASTU is the premier and only technical university in the North Eastern Region of India. The university is responsible for academic regulation of all undergraduate and post-graduate programs in engineering, and pharmaceutical sciences and a few professional courses in science and management sectors. ASTU also conducts an in-house post-graduate course in Energy Engineering. Since its inception, ASTU has been undertaking high quality teaching and research in frontier areas of science & technology continuously upgrading the syllabi and creating environment for international standard research and emphasizing in bridging the ancient wisdom of the region with modern technology.<br>
+                               
+                            <p>Visit <a href="https://astu.ac.in/">www.astu.ac.in</a></p>
 
                                 <br><br><br><br></p>
                         </div>
