--- a/index.html
+++ b/index.html
@@ -129,6 +129,123 @@
                         </p>
                     </div>
                 </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu1.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu2.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu3.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu4.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu5.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu6.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu7.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu8.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/astu9.jpg" alt="ASTU" height="420">
+                    <div class="carousel-modified text-shadow">
+                        <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
+                        <h5 class="animate__animated animate__fadeInRight">15th - 16th March, 2021</h5>
+                        <h6 class="animate__animated animate__fadeInUp">Jointly Organised by: </h6>
+                        <p class="animate__animated animate__fadeInUp"> 
+                            Assam Science and Technology University (ASTU)<br>
+                            And<br>
+                            Central Institute of Technology Kokrajhar(CITK)<br/>
+                            Sponsored by TEQIP-III
+                        </p>
+                    </div>
+                </div>
                 <div class="carousel-item" data-bs-interval="3000"><img class="d-block w-100" src="./images/bihu.jpg" alt="bihu dance" height="420">
                     <div class="carousel-modified text-shadow">
                         <h1 class="animate__animated animate__fadeInDown">Intelligent Computing and Technologies Conference (ICTCon2021)</h1>
