--- a/committee.html
+++ b/committee.html
@@ -142,7 +142,7 @@
             <p>Dr. Bhaskar Saha, CIT Kokrajhar</p>
             <p>Dr. Soumen Maji, CIT Kokrjhar</p>
             <p>Mr. Haradhon Chel, CIT Kokrajhar</p>
-            <p>Mr. Utpal Kr. Sikdar, IBS Software Pvt. Ltd.</p>
+            <p>Dr. Utpal Kr. Sikdar, IBS Software Pvt. Ltd.</p>
 
         </div>
     </section>
