--- a/index.html
+++ b/index.html
@@ -271,7 +271,12 @@
                     <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/ict.jpg" alt="ICT image">
                         <div class="card-body">
                             <h5 class="card-title text-center">ABOUT THE CONFERENCE</h5>
-                            <div class="card-text text-justify">Updating Soon.. <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+                            <div class="card-text text-justify">
+The Intelligent Computing and Technology Conference (ICTCON 2021) being jointly organized by Assam Science and Technology University Guwahati and Central Institute of Technology Kokrajhar during March 15-16, 2021.  The aim of the conference ICTCON 2021 is to provide a platform that brings together academicians, scholars,   engineers, industry people, and students to present their original work and exchange their ideas, experiences, tools, and techniques and applications in various domains of computing and technologies.  All the accepted and registered papers of the conference will be published in a conference proceeding with DOI, ISSN, ISBN number and indexed by Google Scholar.
+
+
+
+<br><br><br><br><br><br></div>
                         </div>
                     </div>
                 </div>
@@ -290,7 +295,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/mainastulogo.jpeg" alt="ASTU, Assam">
+                    <div class="card animate__animated animate__bounceInUp border-0 shadow"><img class="card-img-top" src="./images/astu-logo.png" alt="ASTU, Assam" height="300" width="200">
                         <div class="card-body">
                             <h5 class="card-title text-center">ABOUT ASTU</h5>
                             <p class="card-text text-justify">
