--- a/submission.html
+++ b/submission.html
@@ -41,8 +41,8 @@
     </section>
     <section class="py-5">
         <div class="container">
-            <h4>Paper submission will be through EasyChair.</h4>
-            <h4>EasyChair link: <span class="text-primary"><a href="https://easychair.org/cfp/ICTCON2021">https://easychair.org/cfp/ICTCON2021</a></span></h4>
+            <h4>Paper submission will be through EasyChair.</h4
+            <h4>EasyChair link: <span class="text-primary"><a href="https://easychair.org/conferences/?conf=ictcon2021 "> https://easychair.org/conferences/?conf=ictcon2021  </a></span></h4>
             <h4>You can also follow the format link provided as follows.<span class="text-danger">Updating soon...</span></h4>
             <h4>Latex format link: <span class="text-danger"><a href="https://www.overleaf.com/latex/templates/one-column-ieee-journal-article/ykctxqgxptrs">Single Column IEEE template</a></span></h4>
             <h4>Word format link: <span class="text-danger">Updating soon...</span></h4>
